package adapter_pattern.class_adapter;

public interface ITarget {
    void operation();
}
